--- a/static/css/home.css
+++ b/static/css/home.css
@@ -18,7 +18,7 @@
 .hero-section .content h1 {
     font-size: 2.5rem;
     margin-bottom: 15px;
-    font-weight: bold;
+    font-family: 'IRANSans', Arial, sans-serif;
 }
 
 .hero-section .content p {
