--- a/templates/guide.html
+++ b/templates/guide.html
@@ -8,7 +8,6 @@
     <title>راهنما</title>
 </head>
 <body>
-   
     <main>
         <div id="guide-options">
             <button id="android-button" class="guide-button" onclick="showGuide('android')">آموزش برای اندروید</button>
@@ -41,23 +40,19 @@
                 </li>
                 <li>
                     دکمه «ادامه» را فشار دهید.
-پس از دانلود، خط eSIM خود را در Talk تنظیم کنید.
-یک نام برای خط خود انتخاب کنید. می‌توانید گزینه «تجاری» را انتخاب کنید یا پروفایل خود را با یک برچسب سفارشی نام‌گذاری کرده و نام خود را برای خط وارد کنید.
-برای مثال: «Talk eSIM Trip».
-<img src="/static/images/android-step4.png" alt="تنظیمات اندروید">
+                    پس از دانلود، خط eSIM خود را در Talk تنظیم کنید.
+                    یک نام برای خط خود انتخاب کنید. می‌توانید گزینه «تجاری» را انتخاب کنید یا پروفایل خود را با یک برچسب سفارشی نام‌گذاری کنید. به عنوان مثال: «Talk eSIM Trip».
+                    <img src="/static/images/android-step4.png" alt="تنظیمات اندروید">
                 </li>
                 <li>
-                    به‌صورت پیش‌فرض، خط «اپراتور موبایل شما» را انتخاب کنید. همین تنظیم را برای iMessage، FaceTime و Apple ID نیز اعمال کنید.
-برای داده‌های سلولی (Cellular Data)، اگر در خارج از کشور هستید، گزینه «Talk eSIM Trip» را انتخاب کنید.
-اجازه تغییر خودکار داده‌های موبایل را فعال نکنید.
-<img src="/static/images/android-step5.png" alt="تنظیمات اندروید">
+                    به‌صورت پیش‌فرض، خط «اپراتور موبایل شما» را انتخاب کنید. همین تنظیم را برای iMessage، FaceTime و Apple ID نیز اعمال کنید. برای داده‌های سلولی (Cellular Data)، اگر در خارج از کشور هستید، گزینه «Talk eSIM Trip» را انتخاب کنید. اجازه تغییر خودکار داده‌های موبایل را فعال نکنید.
+                    <img src="/static/images/android-step5.png" alt="تنظیمات اندروید">
                 </li>
                 <li style="font-weight: bold;">
                     در صورت نیاز به راهنمایی بیشتر می‌توانید با 
                     <a href="/support" style="color: red; text-decoration: none;">بخش پشتیبانی</a>
                     تماس بگیرید.
                 </li>
-
             </ul>
         </div>
         <div id="iphone-guide" class="hidden">
@@ -71,24 +66,19 @@
                 <li>کد QR ارائه شده را اسکن کنید.
                     <img src="/static/images/iphone-step2a.png" alt="تنظیمات آیفون">
                 </li>
-                <li>یا جرئیات را بصورت دستی وارد کنید (کد تایید را خالی بگذارید)
+                <li>یا جزئیات را بصورت دستی وارد کنید (کد تایید را خالی بگذارید).
                     <img src="/static/images/iphone-step2b.png" alt="تنظیمات آیفون">
                 </li>
                 <li>دکمه «ادامه» را فشار دهید.
-                    پس از دانلود، خط خود را در Talk eSIM  تنظیم کنید.
-                    یک نام برای خط خود انتخاب کنید. می‌توانید گزینه «تجاری» را انتخاب کنید یا پروفایل خود را با یک برچسب سفارشی نام‌گذاری کنید و نام خود را برای خط وارد کنید.
-            به عنوان مثال: «Talk eSIM Trip».
+                    پس از دانلود، خط خود را در Talk eSIM تنظیم کنید. یک نام برای خط خود انتخاب کنید. می‌توانید گزینه «تجاری» را انتخاب کنید یا پروفایل خود را با یک برچسب سفارشی نام‌گذاری کنید. به عنوان مثال: «Talk eSIM Trip».
                     <img src="/static/images/iphone-step3.png" alt="تنظیمات آیفون">
                 </li>
                 <li>
-                    به‌صورت پیش‌فرض، خط «اپراتور موبایل شما» را انتخاب کنید. همین تنظیم را برای iMessage، FaceTime و Apple ID نیز اعمال کنید.
-اما برای داده‌های سلولی (Cellular Data)، در صورتی که در خارج از کشور هستید، گزینه «Talk eSIM Trip» را انتخاب کنید.
-اجازه تغییر خودکار داده‌های موبایل را فعال نکنید.
+                    به‌صورت پیش‌فرض، خط «اپراتور موبایل شما» را انتخاب کنید. همین تنظیم را برای iMessage، FaceTime و Apple ID نیز اعمال کنید. اما برای داده‌های سلولی (Cellular Data)، در صورتی که در خارج از کشور هستید، گزینه «Talk eSIM Trip» را انتخاب کنید. اجازه تغییر خودکار داده‌های موبایل را فعال نکنید.
                 <img src="/static/images/iphone-step4.png" alt="تنظیمات آیفون">
+                </li>
                 <li>
-                    به تنظیمات (Settings) بروید و گزینه «Cellular / Mobile Data» را انتخاب کنید.
-خط «Talk eSIM Trip» را انتخاب کنید.
-گزینه «Data Roaming» را برای خط «Talk eSIM Trip» فعال کنید.
+                    به تنظیمات (Settings) بروید و گزینه «Cellular / Mobile Data» را انتخاب کنید. خط «Talk eSIM Trip» را انتخاب کنید. گزینه «Data Roaming» را برای خط «Talk eSIM Trip» فعال کنید.
                 <img src="/static/images/iphone-step5.png" alt="تنظیمات آیفون">
                 </li>
                 <li style="font-weight: bold;">
@@ -96,7 +86,6 @@
                     <a href="/support" style="color: red; text-decoration: none;">بخش پشتیبانی</a>
                     تماس بگیرید.
                 </li>
-                
             </ul>
         </div>
     </main>
