--- a/static/css/base.css
+++ b/static/css/base.css
@@ -246,6 +246,7 @@ header {
     display: none;
     font-size: 24px;
     cursor: pointer;
+    text-align: right;
 }
 
 /* استایل‌های ریسپانسیو */
@@ -254,7 +255,7 @@ header {
         display: none;
         flex-direction: column;
         width: 100%;
-        text-align: center;
+        text-align: right; /* راست‌چین کردن آیتم‌ها */
         background-color: #f8f9fa;
         position: absolute;
         top: 60px;
@@ -267,7 +268,7 @@ header {
     }
 
     .navbar li {
-        margin: 10px 0;
+        margin: 5px 0; /* کاهش فاصله بین آیتم‌ها */
     }
 
     .menu-icon {
