--- a/static/css/base.css
+++ b/static/css/base.css
@@ -246,7 +246,6 @@ header {
     display: none;
     font-size: 24px;
     cursor: pointer;
-    text-align: right;
 }
 
 /* استایل‌های ریسپانسیو */
@@ -254,8 +253,9 @@ header {
     .navbar {
         display: none;
         flex-direction: column;
+        align-items: flex-start /* راست‌چین کردن آیتم‌ها */
         width: 100%;
-        text-align: right; /* راست‌چین کردن آیتم‌ها */
+        text-align: right; /* راست‌چین کردن متن آیتم‌ها */
         background-color: #f8f9fa;
         position: absolute;
         top: 60px;
@@ -268,7 +268,7 @@ header {
     }
 
     .navbar li {
-        margin: 5px 0; /* کاهش فاصله بین آیتم‌ها */
+        margin: 5px 10px; /* کاهش فاصله بین آیتم‌ها و اضافه کردن فاصله از راست */
     }
 
     .menu-icon {
